- If a user wishes, mouse movement can always be injected into a Navi, regardless of boundaries/transparency via 'NaviManager::setNaviIgnoreBounds'. The extra-boundary mouse movement injection will actually occur on the closest valid point of a Navi.

Bugfixes since v1.3:
- There was a memory read exception on certain systems due to assumptions about bit depths, this has been resolved.
- Occasionally there are assertions when exiting an application in debug-mode (Gecko bug 339504). Clearing the cache before shutting down seems to help in certain situations. This was contributed by 'Lord LoriK'.
- If you hid a Navi with a fade and then tried to show the Navi without a fade, auto-updated Navis will not be visible because the texture wasn't updated (it would still have 0% opacity). This has been resolved.
- There was a conflict with madmark's contribution, specifically superfluous width offsets being calculated that offset the blitting of non-POT sizes enough to malform them and cause several memory read exceptions. This has been resolved and additionally allows users to use arbitrary sizes for their Navis (only possible on NPOT videocards).

Current Version: NaviLibrary v1.3

API Changes since v1.2:
- In NaviManager:
-- NaviManager::bindNaviData has been added
-- NaviManager::unbindNaviData has been added
-- NaviManager::hideNavi has been added
-- NaviManager::showNavi has been added
-- NaviManager::getNaviVisibility has been added
-- NaviManager::createNavi and createNaviMaterial have been extended, a new parameter 'isVisible'
-- NaviManager::createNavi has been refactored to use a unified NaviPosition object
- In NaviData:
-- NaviData::add has been extended for wide-string support
-- NaviData::get has been extended for wide-string support
- In NaviUtilities:
-- NaviUtilities::encodeURIComponent has been added
-- NaviUtilities::decodeURIComponent has been added
-- NaviUtilities::toWide has been added
-- NaviUtilities::toMultibyte has been added